[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mpesa_consumer"
version = "1.0.0"


[tool.setuptools.sdist]
formats = ["gztar"]

[tool.setuptools.install]
install-lib = "site-packages"
install-scripts = "scripts"
install-headers = "include"

[tool.setuptools.wheel]
universal = false
